See the end for copying conditions.

* Version 0.2.29 (unreleased)

** DIGEST-MD5 server: Added callback to retrieve hashed secret.
The callback is GSASL_DIGEST_MD5_HASHED_PASSWORD.  Patch from "Gazsó
Attila" <agazso@gmail.com>.

** DIGEST-MD5 server: Convert realm from ISO 8859-1 to UTF-8 when needed.
Reported by Adam Goode <adam@spicenitz.org>.

** Obsolete base64 functions rewritten to use our new base64 functions.
The old functions are gsasl_base64_encode and gsasl_base64_decode.
This reduces size of the library somewhat.

** Make the library compile under MinGW again.

** Perl is no longer required to build Libgsasl in Visual Studio.

** API and ABI modifications.
No changes since last version.

* Version 0.2.28 (released 2008-08-20)

** New function to get mechanism name used in current session.
The function is gsasl_mechanism_name.

** The library can be built using Visual Studio.
Patches provided by Adam Strzelecki <ono@java.pl>.  See the manual,
section 'Installing under Windows', for more information.

** Update gnulib files.
Under Windows, the randomness functions will now prefer the Intel RND
crypto provider.  CryptAcquireContext is now invoked with the
CRYPT_VERIFY_CONTEXT parameter.

** API and ABI modifications.
gsasl_mechanism_name: ADD.

* Version 0.2.27 (released 2008-07-01)

** DIGEST-MD5: Fix undefined symbol "utf8tolatin1ifpossible".
This happened if --disable-server is used.  Reported by Martin Lambers
<marlam@marlam.de>.

** Update gnulib files, and include gnulib self-tests.

** Update translations.

** API and ABI modifications.
No changes since last version.

* Version 0.2.26 (released 2008-05-05)

** Translations files not stored directly in git to avoid merge conflicts.
This allows us to avoid use of --no-location which makes the
translation teams happier.

** DIGEST-MD5 server: don't reject authentication if client doesn't use utf-8.
Before, authentication from all non-UTF-8 clients were simply