@@ -105,4 +105,7 @@ mechanism interact is shown in <xref linkend="abstraction"/>.
   <index role="0.2.28">
     <title>Index of new symbols in 0.2.28</title>
   </index>
+  <index role="0.2.29">
+    <title>Index of new symbols in 0.2.29</title>
+  </index>
 </book>
